Range.comparePoint shouldn't throw an exception if the range and the node are in the same detached tree https://bugs.webkit.org/show_bug.cgi?id=148733

Reviewed by Chris Dumez.

Source/WebCore:

Don't throw WRONG_DOCUMENT_ERR when refNode is not in the document. The new behavior matches DOM4 as well
as the behavior of Firefox. See https://dom.spec.whatwg.org/#dom-range-comparepoint

WRONG_DOCUMENT_ERR is still thrown by compareBoundaryPoints later in the function when the root nodes of
refNode and boundary points are different.

There is one subtlety here that we need to throw WRONG_DOCUMENT_ERR instead of INDEX_SIZE_ERR when refNode
and the boundary points don't share the same root node even if (refNode, offset) pair is invalid since
DOM4 spec checks the former condition first. We implement this behavior by first validating the offset
and then explicitly checking for the root node difference if the former check failed to avoid the latter
O(n) check in common cases.

Test: fast/dom/Range/range-comparePoint-detached-nodes.html

* dom/Range.cpp:
(WebCore::Range::comparePoint):

LayoutTests:

Added a regression test and rebaselined a W3C test with more test cases passing.

* fast/dom/Range/range-comparePoint-detached-nodes-expected.txt: Added.
* fast/dom/Range/range-comparePoint-detached-nodes.html: Added.
* http/tests/w3c/dom/ranges/Range-set-expected.txt:


Canonical link: https://commits.webkit.org/166883@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@189327 268f45cc-cd09-0410-ab3c-d52691b4dbfc